--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
           <a href="http://example.org/posts/my-first-post/" class="color-inherit dim link">
-            My First Post
+            这是使用hugo发布的第一篇文章
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          
+          Hello Hugo 这周折腾了很久才吧 Hugo + GitHub Action 自动发布弄好 后面的话，慢慢吧自己之前的文章搬运上来~~
         </div>
           <a href="http://example.org/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
