--- a/technology/index.html
+++ b/technology/index.html
@@ -133,11 +133,11 @@
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
-      1.利用padding垂直居中(line-height用于单行文本居中) **不需要设置高度 **
+      1.利用padding垂直居中(line-height用于单行文本居中) 不需要设置高度
 .parent { border: 1px solid red; padding: 15px 0; }  示例
- 2.利用table垂直居中（兼容IE） **需要设置父元素高度 **
+ 2.利用table垂直居中（兼容IE） 需要设置父元素高度
 &lt;table&gt; &lt;td&gt; &lt;div class=&#34;child&#34;&gt; table垂直居中table垂直居中table垂直居中table垂直居中 &lt;/div&gt; &lt;/td&gt; &lt;/table&gt;  示例
- 3.利用外部包裹垂直居中 **需要设置父元素高度 **
+ 3.利用外部包裹垂直居中 需要设置父元素高度
 &lt;div class=&#34;parent&#34;&gt; &lt;span class=before&gt;&lt;/span&gt; &lt;div class=&#34;child&#34;&gt; 外部包裹 &lt;/div&gt; &lt;span class=after&gt;&lt;/span&gt; &lt;/div&gt; 用伪元素优化一下：
 &lt;div class=&#34;parent&#34;&gt; &lt;div class=&#34;child&#34;&gt; 外部包裹 &lt;/div&gt; &lt;/div&gt; .parent::after{ content: &#39;&#39;; clear:both; display: inline-block; height: 100%; vertical-align: middle; }  示例
  4.div设置table垂直居中 **需要设置父元素高度 **
