--- a/about/index.html
+++ b/about/index.html
@@ -125,8 +125,13 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><!-- raw HTML omitted -->
-<p>这里是瓜皮万事屋，很高兴见到你</p>
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure>
+    <img src="https://basd1995img.oss-cn-shanghai.aliyuncs.com/upup.png"/> <figcaption>
+            <h4>狗富贵，勿相忘。</h4>
+        </figcaption>
+</figure>
+
+<!-- raw HTML omitted -->
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
